bug - continue to experience issue with header and footer overlapping content, added information into tour page to provide details on available tours

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ body {
     font-family: "DM Sans", serif;
     color: #535353;
     font-size: 1rem;
-    /*position: relative;*/
 }
 
 #logo {
@@ -99,10 +98,9 @@ main {
     flex: 1 0 auto;
 }
 
-/*.img-fluid {
-    margin-top: 60px;
-
-}*/
+main .img-fluid {
+    margin-top: 45px;
+}
 
 h2 {
     font-family: "Goldman", serif;
@@ -120,6 +118,12 @@ h2 {
     padding: 0 5% 0 5%;
 }
 
+/* Tour Page */
+
+#tour-options h1 {
+    margin-top: 45px;
+}
+
 
 /* Contact Page */
 
@@ -129,23 +133,13 @@ h2 {
 
 /* Footer */
 
-footer {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: static;
-    width: 100%;
-    background-color: #f7f7f7;
-    text-align: center;
-}
-
 
 #social-media {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
     padding: 0;
-    margin: 20px 0 20px 0;
+    margin: 20px 0 20px 0; 
 }
 
 footer ul {
@@ -180,11 +174,6 @@ footer ul {
         width: auto;
     }
 
-    #welcome-video {
-        width: 100%;
-        height: 200px;
-        
-    }
 
     
 }
@@ -196,13 +185,7 @@ footer ul {
             width: fit-content;
             
         }
-     
-        
-    #welcome-video {
-            width: 100%;
-            height: 200px;
-    
-        }   
+      
 
     }
 
